Added letter generation